@@ -161,8 +161,8 @@ class SpecialLog extends SpecialPage {
 	}
 
 	private function getRevisionButton( $formcontents ) {
-		# If the user doesn't have the ability to delete revisions, don't bother showing him/her the button.
-		if ( !$this->getUser()->isAllowed( 'deleterevision' ) ) {
+		# If the user doesn't have the ability to delete log entries, don't bother showing him/her the button.
+		if ( !$this->getUser()->isAllowed( 'deletelogentry' ) ) {
 			return $formcontents;
 		}
 
