@@ -75,6 +75,8 @@ upgrade PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 23427) New magic word {{PAGEID}} which gives the current page ID.
   Will be null on previewing a page being created.
 * Added ContribsPager::reallyDoQuery hook allowing extensions to data to MyContribs
+* (bug 37926) Deleterevision will no longer allow users to delete log entries,
+  the new deletelogentry permission is required for this.
 
 === Bug fixes in 1.20 ===
 * (bug 30245) Use the correct way to construct a log page title.
